Calculadora electron terminada

--- a/npmproyecto/package.json
+++ b/npmproyecto/package.json
@@ -4,7 +4,9 @@
   "description": "Aprender el uso de npm en los proyectos Web",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron .",
+    "empaqueta": "electron-packager . Calculadora --overwrite --asar"
   },
   "keywords": [
     "node",
@@ -18,6 +20,7 @@
   "author": "MC Martin Nevarez",
   "license": "MIT",
   "devDependencies": {
+    "asar": "^0.14.5",
     "electron": "^3.0.8",
     "electron-packager": "^12.2.0",
     "electron-require": "^0.3.0"
